# ann

./: CMakeLists.txt
.github/workflows/: ci.yml
examples/: CMakeLists.txt
include/: activation.hpp  connection.hpp  criterion.hpp  network.hpp  neuron.hpp
src/: CMakeLists.txt  activation.hpp  main.cpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp
tests/: CMakeLists.txt  activation_test.cpp  criterion_test.cpp  network_test.cpp  neuron_test.cpp
